[tool.poetry]
name = "zcache"
version = "0.1.0"
description = "A tag based invalidation caching library"
authors = ["Alvie Zhang <alvie.zhang@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
redis = "^4.3.0"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "~7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
